<resources>
    <string name="app_name">Our Yearbook</string>
    <string name="This_Is_Our_Yearbook">This Is Our Yearbook</string>
    <string name="Chris_Yearbook">Chris\'s Yearbook</string>
    <string name="Josiah_Yearbook">Josiah\'s Yearbook</string>
    <string name="Will_Yearbook">Will\'s Yearbook</string>
    <string name="batman_picture">batman_picture</string>
    <string name="batman_is_the_best_superhero">Batman is the best superhero</string>
    <string name="Change_Text_View">Change Text View</string>
    <string name="Return_to_Dashboard">Return to Dashboard</string>
    <string name="Graduation_Plan">Graduation Plan</string>
    <string name="Fix_Resume">Fix Resume</string>
    <string name="Apply_for_internships">Apply for internships</string>
    <string name="Contact_Career_Center">Apply for internships</string>
    <string name="Apply_for_jobs">Apply for Jobs</string>
    <string name="Back">Back</string>
    <string name="Change_Text">Change Text</string>
    <string name="Picture">Picture</string>
    <string name="Favorite_Anime_Character_is_Killua_Zoldyck">Favorite Anime Character is Killua Zoldyck</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Carlos_Yearbook">Carlos\'s Yearbook</string>
    <string name="Share_Button">Share Button</string>
    <string name="fourth_Network">4th Network</string>
    <string name="first_work">1st Work on Resume</string>
    <string name="second_work">2nd Work on Portfolio</string>
    <string name="Internship">3rd Internship</string>
    <string name="fifth_Apply">5th Apply</string>
    <string name="Notification">Notification</string>



</resources>