<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94F381"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainBtn3"
        android:layout_width="205dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Will_Yearbook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainBtn2"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/mainTextView1"
        android:layout_width="411dp"
        android:layout_height="235dp"
        android:text="@string/This_Is_Our_Yearbook"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/mainBtn1"
        android:layout_width="205dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Chris_Yearbook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextView1" />

    <Button
        android:id="@+id/mainBtn2"
        android:layout_width="205dp"
        android:layout_height="94dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Josiah_Yearbook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainBtn1" />

</androidx.constraintlayout.widget.ConstraintLayout>